[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4"
log = "0.4"
env_logger = "0.10"
ndarray = "0.15.6"

numpy = "0.21"
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[features]
default = ["python"]   # Enable Python support by default
python = ["dep:pyo3"]  # Feature flag for Python bindings