[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
ordered-float = "3.7"
thiserror = "1.0"

[features]
python = ["pyo3", "numpy"]

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]
optional = true

[dependencies.numpy]
version = "0.20"
optional = true
