[project]
name = "persistence"
version = "0.1.0"
description = "Persistent homology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

# TODO
[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
ignore_missing_imports = true
warn_unused_configs = true
